src/test/resources/testinput/parsable/symtab/invalid_coco/commonOperatorsBoolean.ocl
/* (c) https://github.com/MontiCore/monticore */
package invariants;

ocl commonOperatorsBoolean {
  inv(boolean a, boolean b):
    a || b &&
    a && b &&
    !a &&
    ~a;
}
